--- a/src/components/button/removeCart/style.scss
+++ b/src/components/button/removeCart/style.scss
@@ -67,5 +67,6 @@ button#remove-card-btn {
     span {
         width: 100%;
         flex: 7;
+        text-align: left;
     } 
 }
